Fix text overflow on mobile for button

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -72,7 +72,7 @@ hr {
 }
 
 .add_to_server {
-  width: 20%;
+  width: 40vh;
   height: 5vh;
   background-color: #6d8199;
   color: #ffffff;
